Replace List<Integer> by IntArrayList and List<Long> by LongArrayList. (#13406)